<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_action_divider_bottom_full">Bottom full screen</string>
    <string name="accessibility_action_divider_left_30">Left 30%</string>
    <string name="accessibility_action_divider_left_50">Left 50%</string>
    <string name="accessibility_action_divider_left_70">Left 70%</string>
    <string name="accessibility_action_divider_left_full">Left full screen</string>
    <string name="accessibility_action_divider_right_full">Right full screen</string>
    <string name="accessibility_action_divider_top_30">Top 30%</string>
    <string name="accessibility_action_divider_top_50">Top 50%</string>
    <string name="accessibility_action_divider_top_70">Top 70%</string>
    <string name="accessibility_action_divider_top_full">Top full screen</string>
    <string name="accessibility_action_pip_resize">Resize</string>
    <string name="accessibility_action_pip_stash">Stash</string>
    <string name="accessibility_action_pip_unstash">Unstash</string>
    <string name="accessibility_action_start_one_handed">Start one-handed mode</string>
    <string name="accessibility_action_stop_one_handed">Exit one-handed mode</string>
    <string name="accessibility_bubble_dismissed">Bubble dismissed.</string>
    <string name="accessibility_describe">launcher access service</string>
    <string name="accessibility_divider">Split-screen divider</string>
    <string name="action_settings">Settings</string>
    <string name="active_widget">激活</string>
    <string name="activity_launch_on_secondary_display_failed_text">App does not support launch on secondary displays.</string>
    <string name="adapter_api_debug_open_tip">中间件调试模式</string>
    <string name="adjust_hud">HUD adjustment</string>
    <string name="adjust_rear_mirror">Adjust mirrors</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="apa">Auto parking assist</string>
    <string name="app_center">App Center</string>
    <string name="app_is_installing">Installing app. Wait...</string>
    <string name="app_name">module-sdk</string>
    <string name="app_not_install">请确保儿童守护app已安装</string>
    <string name="app_title">Car Launcher</string>
    <string name="app_uninstall_cancel">Cancel</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apps_all_title">More apps</string>
    <string name="apps_card_cancel_start_app">Cancel</string>
    <string name="apps_card_confirm_start_app">Confirm to open</string>
    <string name="apps_card_tip_backrest_is_running">The back screen is using this app, which will be interrupted If you continue to open</string>
    <string name="apps_card_title">Favorites</string>
    <string name="apps_edit_at_most">Up to 4 apps can be added. Delete some and try again</string>
    <string name="apps_edit_cancel">Cancel</string>
    <string name="apps_edit_finish">Done</string>
    <string name="apps_edit_group_custom_label">Custom</string>
    <string name="apps_edit_group_recent_label">Recents</string>
    <string name="apps_edit_tips">Tap and hold to drag app icons to the Frequently used apps card. You can also replace or sort existing app icons while dragging</string>
    <string name="apps_mini_title">Mini program</string>
    <string name="apps_zeekr_lab_title">Z-emulator</string>
    <string name="aqi_levels_1">Excellent</string>
    <string name="aqi_levels_2">Good</string>
    <string name="aqi_levels_3">Moderate</string>
    <string name="aqi_levels_4">Unhealthy for sensitive groups</string>
    <string name="aqi_levels_5">Unhealthy</string>
    <string name="aqi_levels_6">Very unhealthy</string>
    <string name="aqi_levels_7">Extremely critical</string>
    <string name="aqt_app_name_1">Tencent Aiquting</string>
    <string name="aqt_app_name_2">Aiquting</string>
    <string name="args_full_url">full_url</string>
    <string name="atmosphere_light">Ambient lights</string>
    <string name="auto_hold">Auto Hold</string>
    <string name="avp_go_charge_button">增强版记忆泊车可用</string>
    <string name="avp_pop_12_button">开始</string>
    <string name="avp_pop_12_click">点击按钮开始辅助驾驶</string>
    <string name="avp_pop_14_button">取消</string>
    <string name="avp_pop_14_click">前方受阻，即将为您重新规划路线</string>
    <string name="avp_save">Save</string>
    <string name="avp_study">学习</string>
    <string name="avp_study_click_route">记忆泊车可用，点击学习路线</string>
    <string name="avp_study_click_save">是否确认记忆当前行驶路线？</string>
    <string name="baby_into_car_widget">宝贝上车</string>
    <string name="baby_into_car_widget_active_dsc">即将为您激活宝贝上车，激活后将自动调整“语音、声音、安全、后排空调、车窗、后排屏”到目标状态</string>
    <string name="baby_sleep_well_widget">宝贝安睡</string>
    <string name="baby_sleep_well_widget_active_dsc">即将为您激活宝贝安睡，激活后将自动调整“语音、声音、安全、后排空调、车窗、后排屏”到目标状态</string>
    <string name="back_row_cinema">Rear row theater mode</string>
    <string name="back_row_meeting">Rear meeting mode</string>
    <string name="back_row_rest">Rear rest mode</string>
    <string name="banner_adapter_null_error">Adapter为空！请检查下参数</string>
    <string name="bilibili_app_name">Bilibili</string>
    <string name="bluetooth_no_artist">Not available</string>
    <string name="bluetooth_no_connect">Bluetooth Music - Not Connected</string>
    <string name="bluetooth_no_play">No songs available</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="brvah_load_complete">点击加载更多</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="bt_app_name">Bluetooth Music</string>
    <string name="btn_exit_leave_pilot">Exit Remote parking</string>
    <string name="btn_leave_pilot">Remote parking</string>
    <string name="btn_start_nzp">Click button to start Assisted driving</string>
    <string name="btn_start_pilot">Start parking</string>
    <string name="bubble_accessibility_action_add_back">Add back to stack</string>
    <string name="bubble_accessibility_action_move_bottom_left">Move bottom left</string>
    <string name="bubble_accessibility_action_move_bottom_right">Move bottom right</string>
    <string name="bubble_accessibility_action_move_top_left">Move top left</string>
    <string name="bubble_accessibility_action_move_top_right">Move top right</string>
    <string name="bubble_content_description_single">%1$s from %2$s</string>
    <string name="bubble_content_description_stack">%1$s from %2$s and %3$d more</string>
    <string name="bubble_dismiss_text">Dismiss bubble</string>
    <string name="bubble_overflow_button_content_description">Overflow</string>
    <string name="bubble_overflow_empty_subtitle">Recent bubbles and dismissed bubbles will appear here</string>
    <string name="bubble_overflow_empty_title">No recent bubbles</string>
    <string name="bubbles_app_settings">%1$s settings</string>
    <string name="bubbles_dont_bubble_conversation">Don’t bubble conversation</string>
    <string name="bubbles_settings_button_description">Settings for %1$s bubbles</string>
    <string name="bubbles_user_education_description">New conversations appear as floating icons, or bubbles. Tap to open bubble. Drag to move it.</string>
    <string name="bubbles_user_education_got_it">Got it</string>
    <string name="bubbles_user_education_manage">Tap Manage to turn off bubbles from this app</string>
    <string name="bubbles_user_education_manage_title">Control bubbles anytime</string>
    <string name="bubbles_user_education_title">Chat using bubbles</string>
    <string name="business_voice_disabled">Disable business voice</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel_widget">取消</string>
    <string name="card_energy_chart_desc">Recent trip energy consumption trend</string>
    <string name="card_full_title">Vehicle Condition</string>
    <string name="card_in_preparation">准备中</string>
    <string name="card_kwh_mile_unit">kWh/100 mi</string>
    <string name="card_kwh_unit">kWh/100 km</string>
    <string name="card_title_regex">%1$s%2$s</string>
    <string name="card_trip_1">Trip 1</string>
    <string name="card_trip_2">Trip 2</string>
    <string name="central_lock">Central locking</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="exclusive_child_lock">专属童锁</string>
    <string name="image_control">镜像控制</string>
    <string name="lock_all">全部上锁</string>
    <string name="media_data_exception">Loading failed</string>
    <string name="media_float_lyric_window">Floating Lyrics</string>
    <string name="noa_pop_quick_active">点击按钮开始辅助驾驶</string>
    <string name="noa_pop_quick_button">开始</string>
    <string name="nomic_card_ktv_name">无麦K歌</string>
    <string name="see_back_row">宝贝照看</string>
    <string name="see_more">查看更多</string>
    <string name="title_baby_mode">宝贝模式</string>
    <string name="title_child_protect">儿童守护</string>
    <string name="to_connect_bluetooth">Connect now</string>
    <string name="unlock_all">全部解锁</string>
</resources>