<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center" android:orientation="vertical" android:id="@id/bg_card_avp_container" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/avp_study_button_container" android:layout_width="fill_parent" android:layout_height="@dimen/sr_mini_card_avp_height">
        <TextView android:textSize="@dimen/sp_28" android:textColor="#ff383a3d" android:id="@id/avp_study_button_text" android:layout_width="wrap_content" android:layout_height="@dimen/dp_42" android:text="@string/avp_study_click_route" android:layout_marginStart="@dimen/dp_55" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="@dimen/sp_28" android:textColor="#ffeeeeee" android:gravity="center" android:id="@id/avp_study_button" android:background="@drawable/bg_avp_study_day" android:layout_width="128.0dip" android:layout_height="64.0dip" android:text="@string/avp_study" android:layout_marginEnd="@dimen/dp_30" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/avp_route_save_container" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/sr_mini_card_avp_height">
        <TextView android:textSize="@dimen/sp_28" android:textColor="#ff383a3d" android:id="@id/card_map_save_tv" android:layout_width="wrap_content" android:layout_height="@dimen/dp_42" android:text="@string/avp_study_click_save" android:layout_marginStart="@dimen/dp_55" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="@dimen/sp_28" android:textColor="#ffeeeeee" android:gravity="center" android:id="@id/card_map_save_btn" android:background="@drawable/bg_avp_study_day" android:layout_width="128.0dip" android:layout_height="64.0dip" android:text="@string/avp_save" android:layout_marginEnd="@dimen/dp_30" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_gravity="center" android:id="@id/avp_pop_12_container" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="0.0dip" android:minHeight="@dimen/dp_120" android:layout_weight="1.0" android:layout_marginHorizontal="@dimen/dp_20">
        <TextView android:textSize="@dimen/sp_28" android:textColor="#ff383a3d" android:gravity="center" android:id="@id/avp_pop_12_tv" android:layout_width="wrap_content" android:layout_height="@dimen/dp_42" android:text="@string/avp_pop_12_click" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="@dimen/sp_28" android:textColor="#ffeeeeee" android:gravity="center" android:id="@id/avp_pop_12_btn" android:background="@drawable/bg_avp_study_day" android:layout_width="@dimen/dp_128" android:layout_height="@dimen/dp_64" android:text="@string/avp_pop_12_button" android:layout_marginStart="@dimen/dp_20" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/avp_pop_14_container" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/sr_mini_card_avp_height">
        <TextView android:textSize="@dimen/sp_28" android:textColor="#ff383a3d" android:id="@id/avp_pop_14_tv" android:layout_width="wrap_content" android:layout_height="@dimen/dp_42" android:text="@string/avp_pop_14_click" android:layout_marginStart="@dimen/dp_55" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="@dimen/sp_28" android:textColor="#ffeeeeee" android:gravity="center" android:id="@id/avp_pop_14_btn" android:background="@drawable/bg_avp_study_day" android:layout_width="128.0dip" android:layout_height="64.0dip" android:text="@string/avp_pop_14_button" android:layout_marginEnd="@dimen/dp_30" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/noa_pop_quick_active_container" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/sr_mini_card_avp_height">
        <TextView android:textSize="@dimen/sp_28" android:textColor="#ff383a3d" android:id="@id/noa_pop_quick_active_tv" android:layout_width="wrap_content" android:layout_height="@dimen/dp_42" android:text="@string/noa_pop_quick_active" android:layout_marginStart="@dimen/dp_55" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="@dimen/sp_28" android:textColor="#ffeeeeee" android:gravity="center" android:id="@id/noa_pop_quick_active_btn" android:background="@drawable/bg_avp_study_day" android:layout_width="@dimen/dp_128" android:layout_height="@dimen/dp_64" android:text="@string/noa_pop_quick_button" android:layout_marginEnd="@dimen/dp_30" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
