<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/media_source_name_layout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/empty_bottom_iv" android:layout_marginTop="@dimen/exception_margin_top_size" android:src="@drawable/ic_load_fail" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/empty_status_img" />
    <TextView android:id="@id/empty_bottom_tv" android:text="@string/media_data_exception" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/empty_bottom_iv" style="@style/empty_status_text" />
    <Button android:textSize="@dimen/empty_tv_size" android:textColor="@color/text_color_1" android:layout_gravity="center_horizontal" android:id="@id/empty_bottom_btn" android:background="@drawable/bg_media_retry_button" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="@dimen/media_lyric_switch_btn_height" android:layout_marginTop="@dimen/empty_btn_margin_top" android:minWidth="@dimen/media_lyric_switch_btn_width" android:text="@string/to_connect_bluetooth" android:maxLines="1" android:textAllCaps="false" android:paddingStart="@dimen/media_btn_padding_horizontal" android:paddingEnd="@dimen/media_btn_padding_horizontal" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/empty_bottom_tv" style="?android:borderlessButtonStyle" />
    <com.zeekr.mediawidget.ui.view.MediaToggleButton android:textSize="@dimen/media_float_lyric_switch_size" android:layout_gravity="center_horizontal" android:id="@id/media_float_lyric_switch" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="@dimen/media_lyric_switch_btn_height" android:layout_marginBottom="@dimen/media_lyric_switch_btn_mt" android:minWidth="@dimen/media_lyric_switch_btn_width" android:text="@string/media_float_lyric_window" android:maxLines="1" android:textAllCaps="false" android:paddingStart="@dimen/media_btn_padding_horizontal" android:paddingEnd="@dimen/media_btn_padding_horizontal" android:layout_marginStart="@dimen/media_float_lyric_marginStart" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/Widget.ZeekrButton.Toggle" />
    <com.zeekr.mediawidget.ui.view.MediaToggleButton android:textSize="@dimen/media_float_lyric_switch_size" android:layout_gravity="center_horizontal" android:id="@id/media_nomicktv_switch" android:visibility="gone" android:layout_width="@dimen/media_lyric_switch_btn_width" android:layout_height="@dimen/media_lyric_switch_btn_height" android:layout_marginTop="@dimen/media_lyric_switch_btn_mt2" android:layout_marginBottom="@dimen/media_lyric_switch_btn_mt" android:text="@string/nomic_card_ktv_name" android:layout_marginEnd="@dimen/media_ktv_marginEnd" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" style="@style/Widget.ZeekrButton.Toggle" />
</androidx.constraintlayout.widget.ConstraintLayout>
