<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:theme="@style/ZeekrTheme26" android:orientation="vertical" android:id="@id/widget_card_root" android:background="@drawable/widget_card_bg" android:layout_width="@dimen/dp_660" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="@dimen/dp_94" android:layout_marginStart="@dimen/dp_36">
        <TextView android:textSize="@dimen/sp_28" android:textColor="@color/title_txt" android:id="@id/title_child_protect" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_child_protect" android:layout_centerVertical="true" />
        <RelativeLayout android:id="@id/rl_array" android:layout_width="@dimen/dp_158" android:layout_height="@dimen/dp_94" android:layout_alignParentEnd="true">
            <ImageView android:id="@id/check_box" android:paddingTop="@dimen/dp_29" android:paddingBottom="@dimen/dp_29" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/arror_down" android:paddingStart="@dimen/dp_36" android:paddingEnd="@dimen/dp_36" android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/layout_content_of_view_pager" android:visibility="visible" android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <androidx.viewpager.widget.ViewPager android:layout_gravity="center" android:id="@id/view_pager" android:layout_width="fill_parent" android:layout_height="@dimen/dp_166" />
        <RadioGroup android:layout_gravity="center_horizontal" android:orientation="horizontal" android:id="@id/radio_group" android:clipChildren="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_36" android:layout_marginBottom="@dimen/dp_36" android:layoutDirection="ltr">
            <RadioButton android:id="@id/view_pager_select_logo_0" android:background="@drawable/selector_view_pager" android:layout_width="@dimen/dp_8" android:layout_height="@dimen/dp_8" android:button="@null" />
            <RadioButton android:id="@id/view_pager_select_logo_1" android:background="@drawable/selector_view_pager" android:layout_width="@dimen/dp_8" android:layout_height="@dimen/dp_8" android:button="@null" android:layout_marginHorizontal="10.0dip" />
            <RadioButton android:id="@id/view_pager_select_logo_2" android:background="@drawable/selector_view_pager" android:layout_width="@dimen/dp_8" android:layout_height="@dimen/dp_8" android:button="@null" />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/layout_content_not_view_pager" android:paddingBottom="@dimen/dp_36" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginHorizontal="@dimen/dp_36">
        <LinearLayout android:orientation="horizontal" android:id="@id/layout_lock" android:layout_width="fill_parent" android:layout_height="@dimen/dp_166">
            <com.zeekr.component.button.ZeekrButton android:textSize="@dimen/sp_28" android:id="@id/layout_unlock_all" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/unlock_all" android:layout_weight="1.0" android:paddingStart="@dimen/dp_4" android:paddingEnd="@dimen/dp_4" app:icon="@drawable/unlock_all" app:iconGravity="textTop" app:iconPadding="@dimen/dp_12" app:iconSize="@dimen/dp_40" style="@style/Widget.ZeekrButton.GhostButton" />
            <Space android:layout_width="@dimen/dp_27" android:layout_height="fill_parent" />
            <com.zeekr.component.button.ZeekrButton android:textSize="@dimen/sp_28" android:id="@id/layout_lock_all" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/lock_all" android:layout_weight="1.0" app:icon="@drawable/lock_all" app:iconGravity="textTop" app:iconPadding="@dimen/dp_12" app:iconSize="@dimen/dp_40" style="@style/Widget.ZeekrButton.GhostButton" />
            <Space android:layout_width="@dimen/dp_27" android:layout_height="fill_parent" />
            <com.zeekr.component.button.ZeekrButton android:textSize="@dimen/sp_28" android:id="@id/layout_exclusive_lock" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/exclusive_child_lock" android:layout_weight="1.0" android:paddingStart="@dimen/dp_4" android:paddingEnd="@dimen/dp_4" app:icon="@drawable/exclusive_child_lock" app:iconGravity="textTop" app:iconPadding="@dimen/dp_12" app:iconSize="@dimen/dp_40" style="@style/Widget.ZeekrButton.GhostButton" />
        </LinearLayout>
        <TextView android:textSize="@dimen/sp_28" android:textColor="@color/title_txt_sub" android:id="@id/title_baby_mode" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_66" android:layout_marginBottom="@dimen/dp_30" android:text="@string/title_baby_mode" />
        <LinearLayout android:orientation="horizontal" android:id="@id/layout_baby" android:layout_width="fill_parent" android:layout_height="@dimen/dp_194">
            <FrameLayout android:id="@id/layout_baby_into_car_root" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                <com.zeekr.component.button.ZeekrButton android:textSize="@dimen/sp_28" android:id="@id/layout_baby_into_car" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/baby_into_car_widget" app:icon="@drawable/baby_into_car" app:iconGravity="textTop" app:iconPadding="@dimen/dp_12" app:iconSize="@dimen/dp_88" app:iconTint="@null" style="@style/Widget.ZeekrButton.GhostButton" />
                <ImageView android:layout_gravity="end" android:id="@id/layout_baby_into_car_turn_on" android:visibility="gone" android:layout_width="@dimen/dp_56" android:layout_height="@dimen/dp_30" android:layout_marginTop="@dimen/dp_7" android:src="@drawable/turn_on" android:layout_marginEnd="@dimen/dp_7" />
                <ImageView android:layout_gravity="center" android:id="@id/layout_baby_into_car_loading" android:visibility="gone" android:layout_width="@dimen/dp_72" android:layout_height="@dimen/dp_72" android:src="@drawable/icon_loading" />
            </FrameLayout>
            <Space android:layout_width="@dimen/dp_24" android:layout_height="fill_parent" />
            <FrameLayout android:id="@id/layout_baby_sleep_well_root" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                <com.zeekr.component.button.ZeekrButton android:textSize="@dimen/sp_28" android:id="@id/layout_baby_sleep_well" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/baby_sleep_well_widget" app:icon="@drawable/baby_sleep_well" app:iconGravity="textTop" app:iconPadding="@dimen/dp_12" app:iconSize="@dimen/dp_88" app:iconTint="@null" style="@style/Widget.ZeekrButton.GhostButton" />
                <ImageView android:layout_gravity="end" android:id="@id/layout_baby_sleep_well_turn_on" android:visibility="gone" android:layout_width="@dimen/dp_56" android:layout_height="@dimen/dp_30" android:layout_marginTop="@dimen/dp_7" android:src="@drawable/turn_on" android:layout_marginEnd="@dimen/dp_7" />
                <ImageView android:layout_gravity="center" android:id="@id/layout_baby_sleep_well_loading" android:visibility="gone" android:layout_width="@dimen/dp_72" android:layout_height="@dimen/dp_72" android:src="@drawable/icon_loading" />
            </FrameLayout>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/layout_back_row" android:layout_width="fill_parent" android:layout_height="@dimen/dp_194" android:layout_marginTop="@dimen/dp_25" android:layout_marginBottom="@dimen/dp_26">
            <com.zeekr.component.button.ZeekrToggleButton android:textSize="@dimen/sp_28" android:id="@id/layout_see_back_row" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/see_back_row" android:layout_weight="1.0" app:icon="@drawable/see_back_row" app:iconGravity="textTop" app:iconPadding="@dimen/dp_7" app:iconSize="@dimen/dp_88" app:iconTint="@null" style="@style/Widget.ZeekrButton.Toggle" />
            <Space android:id="@id/layout_image_control_space" android:layout_width="@dimen/dp_24" android:layout_height="fill_parent" />
            <com.zeekr.component.button.ZeekrButton android:textSize="@dimen/sp_28" android:id="@id/layout_image_control" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/image_control" android:layout_weight="1.0" app:icon="@drawable/image_control" app:iconGravity="textTop" app:iconPadding="@dimen/dp_12" app:iconSize="@dimen/dp_88" app:iconTint="@null" style="@style/Widget.ZeekrButton.GhostButton" />
            <com.zeekr.component.button.ZeekrButton android:textSize="@dimen/sp_28" android:id="@id/layout_see_more" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/see_more" android:layout_weight="1.0" android:layout_marginStart="@dimen/dp_24" app:icon="@drawable/see_more" app:iconGravity="textTop" app:iconPadding="@dimen/dp_23" app:iconSize="@dimen/dp_88" app:iconTint="@null" style="@style/Widget.ZeekrButton.GhostButton" />
        </LinearLayout>
        <com.zeekr.component.button.ZeekrButton android:textSize="@dimen/sp_28" android:id="@id/see_more" android:layout_width="fill_parent" android:layout_height="@dimen/dp_86" android:text="@string/see_more" style="@style/Widget.ZeekrButton.GhostButton" />
    </LinearLayout>
</LinearLayout>
